
aTunes 3.0.6
------------
- Updated mplayer binary for Windows
- Support for playing FLV files (audio only)
- Improvements in table sort
- Added basque translation (thanks to Xabier Aramendi)
- FIX: Window size ignored if window is maximized
- FIX: Folder filter does not work with child folders
- FIX: Hide progress slider when fading away

aTunes 3.0.5
------------
- Folder view allows filtering subfolders
- FIX: Statistics not shown in tables
- FIX: Avoid cast errors when reading preferences with kryo fails
- FIX: Error retrieving titles from CD when CD has more tracks than the album information
- FIX: Drag and drop from navigator
- FIX: Navigator not immediately updated after import
- FIX: Store repository folders as list of paths instead of file objects
- Control+F for advanced search

aTunes 3.0.4
------------
- Faster count of repository files
- FIX: Add to play list and play when user uses "Open With" option in Windows
- FIX: Error trying to remove repository folder from disk
- FIX: Error removing favorite objects from device
- FIX: Last play date loses hour and minute
- FIX: Can't add columns to search results dialog
- FIX: Search numbers in title field does not work
- FIX: Seek in progress slider must be fired when releasing mouse button

aTunes 3.0.3
------------
- More heap size for Mac OS X version
- FIX: Error when changing look and feel sin in Windows with Java 1.7.X
- FIX: Radio navigator not controlling clicking out of table bounds
- FIX: Only update displayable windows when changing look and feel skin
- FIX: Some UI operations with navigation tree where not performed in EDT
- FIX: Block device disconnection while refreshing
- FIX: CustomSearchDialog controls not disabled when empty rules
- FIX: NPE when setting an unknown album as favorite

aTunes 3.0.2
------------
- FIX: Error with modal dialogs in Linux
- FIX: Error when importing folders after canceling repository load
- FIX: Add random songs fails if repository not loaded or empty